Various changes to Chapters 1--3, 8--12.
Most of the endnotes for these chapters should be up-to-date.

--- a/proto2.1.tex
+++ b/proto2.1.tex
@@ -139,7 +139,8 @@ the system working as a whole.\endnote{%
 Beginning with language from Figure~\ref{tab:origgramp0201} is transformed into an isomorphically equivalent
 grammar described in Figure~\ref{tab:flatgrp0201}.
 
-\begin{code-list}[h]
+
+\begin{code-list}[th]
   \begin{singlespace}
     \inputminted[linenos]{haskell}{haskell-proto2-flattened-rarefy.hs}
   \end{singlespace}
@@ -192,7 +193,7 @@ as well.\endnote{%
 }
 
 \begin{comment}
-\section{Modifications}
+-\section{Modifications}
 The resulting language is not far from what we did in {\Large ?\LARGE ?}~\ref{proto1}\endnote{%
   Fix me!
 }
