Mainly white-space changes.

--- a/embedding.tex
+++ b/embedding.tex
@@ -48,7 +48,7 @@ in \progLang{Haskell} for \haskellConstruct{Hugs 98}, called \haskellConstruct{M
     One of the implementations discussed on ``Lambda The Ultimate''
     leads us something.
   \item
-    \texttt{Mini \progLang{Prolog}} (\cite{website:mini-prolog-hugs98}) is
+    \texttt{Mini Prolog} (\cite{website:mini-prolog-hugs98}) is
     one of the earliest implementations of \progLang{Prolog} in \progLang{Haskell}.
   \item
     \texttt{Mini Prolog} works with
