--- a/proto2.1.tex
+++ b/proto2.1.tex
@@ -16,24 +16,23 @@ This chapter attempts to infuse the generic methodology from
 in a current \progLang{Prolog} implementation \cite{prolog-lib}
 and make the unification ``monadic''.
 
-This chapter discusses the idea of implementing a basic working \progLang{Prolog} query resolver while using \cite{prolog-lib} as the base 
+This chapter discusses the idea of implementing a basic working \progLang{Prolog} query resolver while using \cite{prolog-lib} as the base
 implementation. The language modifications and unification mechanism
 have been taken from {\Huge \ref{proto1}\endnote{%
   Fix me!!
 }}
 and adapted to fit in with the other
-components such as the search strategy of the library.  
+components such as the search strategy of the library.
 
 
 \section{How prolog-0.2.0.1 works}
 
-As described in the previous chapter about extending languages to incorporate functionality, this prototype applies the procedure to the
-eDSL in \cite{prolog-lib}.
+As described in the previous chapter about extending languages to incorporate functionality, this prototype applies
+the procedure to the eDSL in \cite{prolog-lib}.
 \begin{comment}
 The original abstract syntax used by the library,
 \begin{code-list}[h]
 \begin{minted}[linenos]{haskell}
-
 data VariableName = VariableName Int String
       deriving (Eq, Data, Typeable, Ord)
 
@@ -121,12 +120,12 @@ We do complete \progLang{Prolog} query resolution like stuff.
 \end{comment}
 
 
-Unification is a part of the \progLang{Prolog} working. Simply speaking unification tells us whether or not two terms can be made equal. 
+Unification is a part of the \progLang{Prolog} working. Simply speaking unification tells us whether or not two terms can be made equal.
 The other part is to reach to a point in time when two terms are gathered depending upon matching rules in the knowledge base. This is where
 a search strategy comes into play along with a backtracking mechanism.
 
-Putting everything together forms the \progLang{Prolog} query resolver. Given a query and a knowledge, the query resolver matches the 
-input query with the rules in the knowledge base to create a list of goals to satisfy to generate an unifier along with saving choice 
+Putting everything together forms the \progLang{Prolog} query resolver. Given a query and a knowledge, the query resolver matches the
+input query with the rules in the knowledge base to create a list of goals to satisfy to generate an unifier along with saving choice
 points on the way for backtracking.
 
 This chapter discusses about how the abstract syntax and query resolver from \cite{prolog-lib} can be adapted to the concepts and
@@ -139,26 +138,26 @@ the system working as a whole.\endnote{%
 
 \section{Current implementation (prolog-0.2.0.1)}
 
-Beginning with language from Figure~\ref{tab:origgramp0201} is transformed into an isomorphically equivalent grammar described in 
-Figure~\ref{tab:flatgrp0201}.
+Beginning with language from Figure~\ref{tab:origgramp0201} is transformed into an isomorphically equivalent
+grammar described in Figure~\ref{tab:flatgrp0201}.
 
 \begin{code-list}[h]
 	\begin{singlespace}
 		\begin{minted}[linenos]{haskell}
 data Term = Struct Atom [Term]
           | Var VariableName
-          | Wildcard -- Don't cares 
+          | Wildcard -- Don't cares
           | Cut Int
       deriving (Eq, Data, Typeable)
 
 var = Var . VariableName 0
 cut = Cut 0
-	      
+
 data Clause = Clause { lhs :: Term, rhs_ :: [Goal] }
             | ClauseFn { lhs :: Term, fn :: [Term] -> [Goal] }
       deriving (Data, Typeable)
 
-rhs :: Clause -> [Term] -> [Goal]      
+rhs :: Clause -> [Term] -> [Goal]
 rhs (Clause   _ rhs) = const rhs
 rhs (ClauseFn _ fn ) = fn
 
@@ -167,7 +166,7 @@ data VariableName = VariableName Int String
 
 type Atom         = String
 type Goal         = Term
-type Program      = [Clause]		
+type Program      = [Clause]
 		\end{minted}
 	\end{singlespace}
 	\caption{Original Recursive Grammar}
@@ -184,7 +183,7 @@ The steps involved for the transformation are listed below.
 \item Create a fixed-point version of the resulting grammar.
 \end{enumerate}
 
-The above approach allows to us to jump between the environments(grammars) easily provided the back and forth conversion capabilities. 
+The above approach allows to us to jump between the environments(grammars) easily provided the back and forth conversion capabilities.
 
 The resulting abstract grammar is shown in the Figure~\ref{tab:flatgrp0201}.\endnote{%
   Page break following removed.
@@ -200,10 +199,13 @@ The resulting abstract grammar is shown in the Figure~\ref{tab:flatgrp0201}.\end
 \end{code-list}
 
 
-After the language is opened up, the next step is to replace the current unification procedure to the one 
+After the language is opened up, the next step is to replace the current unification procedure to the one {\Huge
+  ?\endnote{%
+  Something is missing here.  The current text comes from commit \texttt{a1b2c01fb24}.
+}}
 
 
-The current unification uses basic pattern matching to unify the terms. All the shortcomings related to the language also affect the 
+The current unification uses basic pattern matching to unify the terms. All the shortcomings related to the language also affect the
 unification mechanism.
 
 Beginning with the result produces by the query resolver shown in Figure~\ref{tab:prlg0201unifier}.
@@ -242,8 +244,11 @@ as well.\endnote{%
 
 
 \section{Modifications}
-The resulting language is not far from what we did in \ref{proto1} apart from the fact that the \textit{Term} expressions are encapsulated
-to form \textit{Clauses} which in turn form a \textit{Program}.
+The resulting language is not far from what we did in {\Large ?\LARGE ?}~\ref{proto1}\endnote{%
+  Fix me!
+}
+apart from the fact that the \markWord{Term} expressions are encapsulated
+to form \markWord{Clauses} which in turn form a \markWord{Program}.
 
 Moreover, the required instances make the language compatible with the unification procedure.
 
@@ -253,8 +258,9 @@ Moreover, the required instances make the language compatible with the unificati
 
 Aditionally helper functions for converting expressions between the two domains and translation to \markWord{UTerm}.
 
-To solve the issue of infinitely deep language expressions, we find the fixed point of the expression. The unification function provided by 
-\cite{prolog-lib} is not very \progLang{Prolog} like\eref{language-like} in nature and certain adjustments need to be made. 
+To solve the issue of infinitely deep language expressions, we find the fixed point of the expression.
+The unification function provided by \cite{prolog-lib} is not very \progLang{Prolog} like\eref{language-like} in
+nature and certain adjustments need to be made.
 \begin{enumerate}
 \item Extracting variable and creating dictionaries.
 
