--- a/proto1.tex
+++ b/proto1.tex
@@ -413,7 +413,6 @@ a -> a :: *
 
 Simply speaking we can have something like
 \mint{haskell}|FlatTerm Bool|
-
 and a generic function like,
 \mint{haskell}|function :: (a -> b) -> FlatTerm a -> FlatTerm b|
 \begin{comment}
@@ -643,19 +642,9 @@ the recursive ADT, so too we only need to specify one level of the unification (
 the library's operators to perform the recursive unification\xxx{, subsumption}.
 This is shown in Figure~\ref{tab:zipMatch}.
 \begin{code-list}
-  \begin{minted}[linenos]{haskell}
-    instance Unifiable (FlatTerm) where
-       zipMatch (Struct al ls) (Struct ar rs) =
-         if (al == ar) && (length ls == length rs)
-         then Struct al <$>
-           pairWith (\l r -> Right (l,r)) ls rs
-         else Nothing
-       zipMatch Wildcard _ = Just Wildcard
-       zipMatch _ Wildcard = Just Wildcard
-       zipMatch (Cut i1) (Cut i2) = if (i1 == i2)
-         then Just (Cut i1)
-         else Nothing
-  \end{minted}
+  \begin{singlespace}
+    \inputminted[linenos]{haskell}{haskell-proto1-zip-flat.hs}
+  \end{singlespace}
   \vspace*{-0.5\baselineskip}
   \caption{\protect\markWord{FlatTerm} instance of \protect\markWord{zipMatch}}
   \label{tab:zipMatch}
