--- a/introduction.tex
+++ b/introduction.tex
@@ -39,10 +39,11 @@ This document looks at the attempts, improvements and future possibilities of un
 functional programming language and \progLang{Prolog}, a logical programming language so that one is not forced to
 choose. The task at hand involves replicating \progLang{Prolog} like
 features in \progLang{Haskell} such as unification and a single typed system.
-The thesis aims at leveraging the features of the host language in order to incorporate logic programming features resulting in extending 
-\progLang{Haskell} with capabilities like unification. We achieve this by adopting various aspects from approaches related to merging 
-paradigms and embedding techniques for programming languages. This results in a hybrid approach which provides a library taking advantage 
-of the host language features.
+The thesis aims at leveraging the features of the host language in order to incorporate logic programming features
+resulting in extending \progLang{Haskell} with capabilities like unification.
+We achieve this by adopting various aspects from approaches related to merging paradigms and embedding techniques
+for programming languages.
+This results in a hybrid approach which provides a library taking advantage of the host language features.
 
 
 
@@ -61,20 +62,19 @@ capabilities.
 %----------------------------------------------------------------------------
 
 Over the years the development of programming languages has become more and more rapid.
-Today the number of is in the thousands and counting \cite{website:timelineproglangwiki, website:historyofproglang}.
-The successors attempt to introduce new concepts and features to simplify the process of coding a solution and assist
-the programmer by lessening the burden of carrying out standard tasks and procedures.
-A new one tries to capture the best of the old; learn from the mistakes, add new concepts and move on; which seems to be
-good enough from an evolutionary perspective.
+Today the number of is in the thousands and counting \cite{website:timelineproglangwiki,
+  website:historyofproglang}.
+The successors attempt to introduce new concepts and features to simplify the process of coding a solution and
+assist the programmer by lessening the burden of carrying out standard tasks and procedures.
+A new one tries to capture the best of the old; learn from the mistakes, add new concepts and move on; which seems
+to be good enough from an evolutionary perspective.
 But all is not that straight forward when shifting from one language to another.
 There are costs and incompatibilities to look at.
 A language might be simple to use and provide better performance than its predecessor but not always be worth the
 switch.
 Another approach would be to replicate target features exhibited by a language in the present one to avoid the
-hassle of jumping between the two. Commonly this results in an embedded language or a foreign function interface.\endnote{%
-  Rewrite as two sentences.
-}
-%<<<<<<< 92e9eab348fb38506776f3025d3176b4e48557a9
+hassle of jumping between the two.
+Commonly this results in an embedded language or a foreign function interface.
 A mixture of these ideologies results in a multi-paradigm / merged programming language.
 We try to encapsulated both the approaches of embedding and merging to develop a hybrid approach.
 %=======
@@ -179,11 +179,7 @@ pushed to
 don the avatar of \progLang{Prolog}?
 This is the million dollar question.
 
-<<<<<<< HEAD
-A \progLang{Haskell} with \progLang{Prolog}-like\eref{language-like} features will result in a set of characteristics which are from
-=======
-A \progLang{Haskell} with \progLang{Prolog} like\eref{language-like} features will result in a set of characteristics which are from
->>>>>>> tagged uses of "like" that can be improved.
+A \progLang{Haskell} with \progLang{Prolog}-like features will result in a set of characteristics which are from
 both the declarative paradigms.
 %----------------------------------------------------------------------------------------------------------------------
 
