Addressed notes and most of \xxx and \yyy corrections

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1466,6 +1466,15 @@ month = {July},
 year = {2015},
 url = {http://www.thesoftwareguild.com/history-of-programming-languages/}
 }
+@article{van2000domain,
+  title={Domain-Specific Languages: An Annotated Bibliography.},
+  author={Van Deursen, Arie and Klint, Paul and Visser, Joost},
+  journal={Sigplan Notices},
+  volume={35},
+  number={6},
+  pages={26--36},
+  year={2000}
+}
 @comment{website:,
 title = ,
 author = ,
