--- a/hwh.tex
+++ b/hwh.tex
@@ -33,7 +33,7 @@ provides for embedding domain specific languages(EDSLs).
   \progLang{Haskell} is widely used in the industry \cite{website:haskellinindustry}.
 
   Shifting a bit to Embedded Domain Specific Languages (EDSLs) such as Emacs LISP.
-  Opting for embedding provides a \yyy{"}{``}shortcut\yyy{"}{''} to create a language which may be designed to provide specific
+  Opting for embedding provides a ``shortcut'' to create a language which may be designed to provide specific
   functionality.
   Designing a language from scratch would require writing a parser, code generator / interpreter and possibly a
   debugger, not to mention all the routine stuff that every language
@@ -47,18 +47,18 @@ provides for embedding domain specific languages(EDSLs).
   might not be exact to specification, all required constructs cannot be implemented due to constraints, programs
   could be difficult to debug since it happens at the host level and so on.
 
-\item Looking at \progLang{Haskell} as a tool for embedding domain specific languages\yyy{}{\Verb[showspaces]! !}\cite{website:paulspontifications}
+\item Looking at \progLang{Haskell} as a tool for embedding domain specific languages \cite{website:paulspontifications}
 
 \begin{enumerate}
 \item Monads
 \newline
-Control flow defines the order/ manner of execution of statements in a pro\-gram\yyy{}{\Verb[showspaces]! !}\cite{website:controlflowwiki}.
+Control flow defines the order/ manner of execution of statements in a pro\-gram \cite{website:controlflowwiki}.
 The specification is set by the programming language.
 Generally, in the case of imperative languages the control flow is sequential while for a functional language is
 recursion \cite{website:controlflowdalhousie}.
 For example, \progLang{Java} has a top down sequential execution approach.
 The declarative style consists of defining components of programs i.e.
-computations not a control flow\yyy{}{\Verb[showspaces]! !}\cite{website:declarativeprogrammingwiki}.
+computations not a control flow \cite{website:declarativeprogrammingwiki}.
 
 This is where \progLang{Haskell} shines by providing something called a \textit{monad}.
 Functional Programming Languages define computations which then need to be ordered in some way to form a
