--- a/metasyntacticvariables.tex
+++ b/metasyntacticvariables.tex
@@ -38,10 +38,10 @@ A name used in examples and understood to stand for whatever thing is under disc
 or other words like it as permanent names for anything. In filenames, a common convention is that any filename beginning with a metasyntactic-variable name is a scratch file that may be deleted at any time.
 
 Metasyntactic variables are so called because they are variables in the metalanguage used to talk about programs
-etc; they are variables whose values are often variables (as in usages like \yyy{“}{``}the value of f(foo,bar) is
-the sum of foo and bar\yyy{”}{''}).
-However, it has been plausibly suggested that the real reason for the term \yyy{“}{``}metasyntactic
-variable\yyy{”}{''} is that it sounds good.
+etc; they are variables whose values are often variables (as in usages like ``the value of f(foo,bar) is
+the sum of foo and bar'').
+However, it has been plausibly suggested that the real reason for the term ``metasyntactic
+variable'' is that it sounds good.
 To some extent, the list of one's preferred metasyntactic variables is a cultural signature.
 They occur both in series (used for related groups of variables or objects) and as singletons.
 Here are a few common signatures:
@@ -62,7 +62,7 @@ A word, used in conversation or text that is meant as a variable. There is a fai
 culture. People tend to create their own if they are not exposed to others, which can be confusing. Of course, if you haven't seen them before they can be quite confusing. They are, however, useful enough that this is not enough reason to give them up.
 Standard set: foo, bar, baz, foobar/quux, quuux, quuuux, ....
 
-example: \yyy{"}{``}Suppose I have a list, foo, with a node, bar, ...\yyy{"}{''}
+example: ``Suppose I have a list, foo, with a node, bar, ...''
 
 
 \section{Chapter Recapitulation}
