--- a/multiparadigm.tex
+++ b/multiparadigm.tex
@@ -29,11 +29,11 @@ Languages that combine two of the most widespread Declarative Programming Styles
 
 A peak into language classification reveals that it is not always a straight forward task to segregate languages
 according to their features and\xxx{/or} characteristics.
-\yyy{Turns}{It turns} out that there are a number of notions which play a role in deciding where the language
+It turns out that there are a number of notions which play a role in deciding where the language
 belongs. 
-\yyy{Many a times}{Often} a language ends up being a part of almost all paradigms due \yyy{}{to }extensive libraries.
+Often a language ends up being a part of almost all paradigms due to extensive libraries.
 Simply speaking, a multi-paradigm programming language is a programming language that supports more than one
-programming paradigm \cite{Krishnamurthi:2008:TPL:1480828.1480846},\eref{comma-splice} more over\yyy{}{\Large,} as Timothy Budd puts it
+programming paradigm \cite{Krishnamurthi:2008:TPL:1480828.1480846},\eref{comma-splice} more over, as Timothy Budd puts it
 \cite{website:wikimultiparadigm} ``The idea of a multi paradigm language is to provide a framework in
 which programmers can work in a variety of styles, freely intermixing constructs from different
 paradigms.''
@@ -44,7 +44,7 @@ paradigms.''
   
 \subsection{Multi Paradigm Languages}
 
-  A lot has been \yyy{talked}{said} and discussed on\endnote{%
+  A lot has been said and discussed on\endnote{%
     ``discussed on'' does not work.
 }
   coming to clear grounds about the classification of programming languages.
@@ -107,8 +107,8 @@ A recent survey \cite{hanus2007multi} throws light on these hybrid languages.
 
 One of the most prominent multi paradigm languages in \progLang{Haskell} is \progLang{Curry}
 \cite{antoy2010functional}.
-\yyy{Th}{The} syntax is borrowed from the parent language and so are a lot of the features.
-\yyy{Taking a recap}{Recapitulating}, a functional programming language works on the notion of mathematical functions while a logic
+The syntax is borrowed from the parent language and so are a lot of the features.
+Recapitulating, a functional programming language works on the notion of mathematical functions while a logic
 programming language is based on predicate logic.
 The strong points of \progLang{Curry} are that the features or basis of the language are general and are visible in
 a number of languages like \cite{website:toy}.
@@ -139,7 +139,7 @@ Although the language can do a lot but gaps do exist such as the improvement of 
 
 \section{Some Multi Paradigm Languages}
 
-The list of multi paradigm languages is huge, but in this thesis we will mostly stick to Functional Logical programming languages. Beginning with functional hybrids, a small project language called \progLang{Virgil} \cite{website:virgil}, \yyy{combining}{combines}\endnote{%
+The list of multi paradigm languages is huge, but in this thesis we will mostly stick to Functional Logical programming languages. Beginning with functional hybrids, a small project language called \progLang{Virgil} \cite{website:virgil}, combines\endnote{%
   Otherwise you have a sentence fragment.
 }
 objects to work with functions and procedures.
@@ -169,9 +169,9 @@ the \progLang{Scala} \cite{website:scala} programming language stands out.
 
 \section{Functional Logic Programming Languages}
 
-Knowing \xxx{that there is} \yyy{quite some}{the} amount of literature \xxx{out there} on these type of languages, it is fairly easy to say that there have been numerous 
-attempts at specifications and\xxx{/or} implementations.
-Sadly though\yyy{}{\Large,} not many have survived, \yyy{leave}{let} alone \yyy{being}{been} successful \xxx{as a} \xxx{result of} \xxx{the competition}.
+Knowing the amount of literature  on these type of languages, it is fairly easy to say that there have been numerous 
+attempts at specifications and implementations.
+Sadly though, not many have survived, let alone been successful.
 Only the ones that
 \begin{inparaenum}[(a)]
 \item
@@ -181,23 +181,23 @@ Only the ones that
 \item
   have been cited or referred by other attempts
 \end{inparaenum}
-have been included, as the list is long and \yyy{does}{is} not \xxx{reflect} the main \yyy{intention}{focus} of the \yyy{document}{thesis}.\endnote{%
+have been included, as the list is long and is not the main focus of the thesis.\endnote{%
   This is a good sentence; but I believe that the changes indicated make it clearer.
 }
-\yyy{Beginning}{We begin}\endnote{%
+We begin\endnote{%
   The rewording avoids a sentence fragment.
 }
-with the ones from Australia, which seems to be a popular \yyy{destination}{location} for fiddling with
+with the ones from Australia, which seems to be a popular location for fiddling with
 \progLang{Prolog} and merging paradigms.
 As of now there have been three popular ones, beginning with \progLang{Neu Prolog}, \cite{website:nue-prolog},
 \progLang{Oz (Mozart Programming System)} \cite{website:oz-mozart} and \progLang{Mercury} \cite{website:mercury}.
-Delving deeper\yyy{}{\Large,} the languages feel more like extensions of \progLang{Prolog} rather than hybrids.
-\yyy{Starting}{To start} with \progLang{Mercury} \yyy{which}{represents} a boundary between deterministic and
-non-deterministic programs\yyy{, similarly}{. Similarly,}
+Delving deeper, the languages feel more like extensions of \progLang{Prolog} rather than hybrids.
+To start with \progLang{Mercury} represents a boundary between deterministic and
+non-deterministic programs. Similarly,
 \progLang{Nue Prolog}\endnote{%
   ``\progLang{Nue Prolog}'' or ``\progLang{Neu Prolog}''?
 }
-has special support for functions\yyy{}{\Large,} while \progLang{Oz} gives concurrent constraint programming
+has special support for functions, while \progLang{Oz} gives concurrent constraint programming
 plus distributed support, with different function types for goal solving and expression rewriting.\endnote{%
   Are we done with Australia?
   If so, insert something like ``\textsl{Turning now to other languages,}''.
@@ -231,7 +231,7 @@ The functional language \progLang{Scheme} is a very popular choice for this sort
 With a book \cite{friedman05reasoned} and an implementation to accompany
 \cite{website:kanren,website:minkanren}\endnote{%
   This preceding phrase is not a sentence.
-}\elabel{not-a-sentence}\yyy{}{\Large,} 
+}\elabel{not-a-sentence}, 
 which seems to have translated into \progLang{Haskell}, 
 \cite{website:haskellkanren,website:molog,website:minikanrent}. 
 
