--- a/pwp.tex
+++ b/pwp.tex
@@ -54,7 +54,7 @@ Variables are denoted by a string consisting of letters, numbers and underscore 
 underscore. Variables closely resemble variables in logic in that they are placeholders for arbitrary terms. A variable can become 
 instantiated (bound to equal a specific term) via unification.
 
-A compound term is composed of an atom called a \yyy{"}{``}functor\yyy{"}{''} and a number of \yyy{"}{``}arguments\yyy{"}{''}, which are again terms. Compound terms are ordinarily 
+A compound term is composed of an atom called a ``functor'' and a number of ``arguments'', which are again terms. Compound terms are ordinarily 
 written as a functor followed by a comma-separated list of argument terms, which is contained in parentheses. The number of arguments is 
 called the term's arity. An atom can be regarded as a compound term with arity zero.
 
