--- a/background.tex
+++ b/background.tex
@@ -18,7 +18,7 @@ Programming languages fall into different categories also known as ``paradigms''
 They exhibit different characteristics according to the paradigm they fall into.
 It has been argued \cite{Krishnamurthi:2008:TPL:1480828.1480846} that
 rather than classifying a language into a particular paradigm
-\yyy{Tt}{\Huge ,}
+,
 it is
 more accurate that a language exhibits a set of characteristics from a
 number of paradigms.
@@ -34,12 +34,12 @@ mathematical functions to arguments to get results.
 A program itself consists of functions and functions only which when applied to arguments produce results without
 changing the state that is values on variables and so on.
 Higher order functions allow functions to be passed as arguments to other functions.
-The roots lie in $\lambda$-calculus \cite{website:lambdacalculuswiki}, a formal system in mathematical logic and
+The roots lie in $\lambda$-calculi \cite{website:lambdacalculuswiki}, a formal system in mathematical logic and
 computer science for expressing computation based on function abstraction and application using variable binding
 and substitution.
 It can be thought as the smallest programming language \cite{rojas2004tutorial}, a single rule and a single
 function definition scheme.
-In particular there are typed and untyped $\lambda$ calculi.\endnote{%
+In particular there are typed and untyped $\lambda$-calculi.\endnote{%
   There are a bunch of minor inconsistencies here.
   \begin{inparaitem}
   \item Two sentences up,
@@ -53,11 +53,11 @@ In particular there are typed and untyped $\lambda$ calculi.\endnote{%
     specific languages.
   \end{inparaitem}
 }
-In the untyped $\lambda$ calculus functions have no predetermined \yyy{type whereas,}{type, whereas} typed lambda calculus puts
-restriction on what sort\yyy{}{\Verb[showspaces]! !}(type) of data can a function work with.
+In untyped $\lambda$-calculi functions have no predetermined type, whereas typed $\lambda$-calculi puts
+restriction on what sort (type) of data can a function work with.
 \progLang{Scheme} is based on the untyped variant, while \progLang{ML} and \progLang{Haskell} are based on typed
-$\lambda$ calculus.
-Most typed $\lambda$ calculus langauges are based on Hindley-Milner or Damas-Milner or Damas- Hindley-Milner
+$\lambda$-calculi.
+Most typed $\lambda$-calculi langauges are based on Hindley-Milner or Damas-Milner or Damas- Hindley-Milner
 (\cite{hindley1969principal,milner1978theory,website:hdmtypesystemwiki}) type system.
 The Hindley-Milner like type systems have the ability to give a most general type of a program without any
 annotations. 
@@ -89,15 +89,13 @@ This is done until the one which gives the solution is not derived.
 }
 
 In this thesis we aim to merge two languages
-together and produce a result which \xxx{would} \yyy{exhibit}{exhibits} hybrid
+together and produce a result which exhibits hybrid
 properties.\endnote{%
-  Make the suggested fixes in this sentence, then remove this \macroName{endnote}.
-}
-Further on we talk about more about the languages in question and approaches\xxx{\Verb[showspaces]! !}.\endnote{%
   Remove this sentence, and merge with the following \P.
 }
 
-The languages in question are \progLang{Haskell} and \progLang{Prolog}.\endnote{%
+The languages in question are \progLang{Haskell} and \progLang{Prolog}. These two languages come from respective the functional programming and logical programming branches of the
+    declarative language group.\endnote{%
   Insert a sentence here linking these two languages with the \P's above.
   Use something like
   \begin{quote}\slshape
@@ -117,12 +115,12 @@ Languages, has
 spawned a number of distributions and is present from academia to industry.  
 
 \progLang{Haskell} is one the most popular \cite{website:langpop} functional languages around and is the 
-first language to incorporate monads \cite{wadler1992comprehending} for safe \unknownLabel{IO}\endnote{%
+first language to incorporate monads \cite{wadler1992comprehending} for safe input and output\endnote{%
   Perhaps just use ``\textsl{input and output}'' in place of ``\textit{IO}''.
 }\,. Monads can be 
 described as composable computation descriptions \cite{website:monadshaskellorg} . Each monad consists of a 
 description of what has action has to be executed, how the action has to be run and how to combine such 
-computations. An action can describe an impure or side-effecting computation, for example, \textit{IO} can be 
+computations. An action can describe an impure or side-effecting computation, for example, input and output can be 
 performed outside the language but can be brought together with pure functions inside in a program resulting in a 
 separation and maintaining safety with practicality. \progLang{Haskell} computes results lazily and is strongly 
 typed. 
@@ -132,11 +130,11 @@ bringing them onto the same plate is tricky.
 The differences in typing, execution, working among others lead to an altogether mixed bag of properties.
 
 
-The selection of the target language is not uncommon\yyy{;}{:}
+The selection of the target language is not uncommon:
   \progLang{Prolog} seems 
 to be the all time favourite for ``let's implement \progLang{Prolog} in
 the language X for proving
-\yyy{it's}{its}\endnote{%
+its\endnote{%
   Please be careful about ``it's'' and ``its''.  Remove this endnote when you are confident that you have checked
   them all.
 }
@@ -147,9 +145,9 @@ languages such as \progLang{Scheme} \cite{racklog}, \progLang{Lisp}
 \progLang{JavaScript} \cite{jscriptlog} and the list \cite{yieldprolog} goes on.
 
 The technique of embedding is a shallow one.
-It is as if the embedded language floats over the host\yyy{}{ language}.
+It is as if the embedded language floats over the host language.
 Other approaches provide deeper integration between the target and the host.
-\yyy{Further on}{Here}\endnote{%
+Here\endnote{%
   I am not sure which ``further on'' you are referring to.
   Is it the rest of this \P{}, or is it Chapter~\ref{chap:multiparadigm}?
 }
@@ -158,11 +156,11 @@ Over time there has been an approach that branches out, which is Paradigm Integr
 A lot of work has been done on Unifying the Theories of Programming
 \cite{DBLP:conf/utp/2006,DBLP:conf/utp/2008,DBLP:conf/utp/2010,DBLP:conf/utp/2012,hoare1998unifying,
   gibbons2013unifying}.
-\yyy{All sorts of hybrid}{Hybrid} languages \yyy{which}{that} have characteristics from more than one paradigm are coming into the
+Hybrid languages that have characteristics from more than one paradigm are coming into the
 mainstream.
-One of the more successful attempts is \progLang{Scala}\yyy{}{\Verb[showspaces]! !}\cite{website:scala}. Simply speaking it is like a \textit{functional} 
-\progLang{Java} providing side-effect free programming environment along with \xxx{the}
-\yyy{\progLang{Java} like}{\progLang{Java}-like} features.
+One of the more successful attempts is \progLang{Scala} \cite{website:scala}. Simply speaking it is like a \textit{functional} 
+\progLang{Java} providing side-effect free programming environment along with
+\progLang{Java}-like features.
 
 Before moving on, let us take a look at some terms related to the content above.
 To begin with Foreign Function Interfaces (FFI) \cite{website:ffiwiki}, a mechanism by which a program written in
@@ -172,11 +170,10 @@ vice versa through the FFI mechanism.
 Currently the \progLang{Haskell} foreign function interface works only for one language.
 Another notable example is the Common Foreign Function Interface (CFFI) \cite{website:commonlisp} for
 \progLang{Lisp} which provides fairly complete support for \progLang{C} functions and data.
-\yyy{}{As yet another example,}
+As yet another example,
 \progLang{Java} provides the Java Native Interface(JNI) for the working with other languages.
-Moreover there are services that provide a common platform for multiple languages to work with each other \xxx{and run
-their programs.}
-They can be termed as \yyy{multi lingual run times}{multilingual run-times}\endnote{%
+Moreover there are services that provide a common platform for multiple languages to work with each other. 
+They can be termed as multilingual run-times\endnote{%
   I am not sure which of 
   \begin{compactitem}
   \item \textit{run times}
@@ -186,6 +183,7 @@ They can be termed as \yyy{multi lingual run times}{multilingual run-times}\endn
   is correct.
   What do basic O/S texts use?
   ``Multilingual'' is definitely one word.
+  https://en.wikipedia.org/wiki/Run_time_(program_lifecycle_phase)
 }
 which lay down a common layer for languages to use each others
 functions.
@@ -209,7 +207,7 @@ modified at compile time which allows playing with the code and going back and f
   The preceding sentence needs fixing.
 }
 
-A specific tool used in meta programming is quasi quotation\endnote{%
+A specific tool used in meta programming is quasi-quotation\endnote{%
   I believe that Wikipedia uses ``quasi-quotation'' rather than ``quasi quotation''.
   Check to see what is commonly used.
 }
@@ -218,8 +216,10 @@ which permits
 \progLang{Haskell} expressions and patterns to be constructed using domain specific, pro\-gram\-mer-de\-fined concrete
 syntax.
 For example, consider a particular application that requires a complex data type.
-To accommodate the same it has to represented using \progLang{Haskell} syntax and preforming\endnote{%
-  ``preforming'' or ``performing''?  
+To accommodate the same it has to represented using \progLang{Haskell} syntax and performing\endnote{%
+  ``preforming'' or ``performing''?
+  \mehul{performing}
+
 }
 pattern matching may
 turn into a tedious task.
@@ -239,7 +239,7 @@ append([X|Xs], Ys, [X|Zs]) :- append(Xs, Ys, Zs).
 \end{code-list}
 going through the code, the first rule says that and empty list appended with any list results in the list itself.
 The second predicate matches the head of the first and the resulting
-lists and then \yyy{recurs}{\mbox{recurses}} on the tails. 
+lists and then recurses on the tails. 
 The same in \progLang{Haskell},\endnote{%
   \david{Is the point here that templating helps, or what?}\newline
   \mehul{it is just one of the many ways to bring the languages together}\newline
@@ -262,7 +262,7 @@ it is purely functional but with objects and classes.
 With the above in mind, coming back to the problem of implementing \progLang{Prolog} in \progLang{Haskell}.\endnote{%
   Sentence fragment.
 }
-There have been quite a few attempts to ``merge'' the two programming languages from different programming
+There have been quite a few attempts to ``merge'' these two programming languages that are from different programming
 paradigms.\endnote{% 
   Do you mean
   \begin{quote}
@@ -275,8 +275,10 @@ paradigms.\endnote{%
     from different programming paradigms.
   \end{quote}
   The word ``the'' confuses me here.
+  \mehul{There have been quite a few attempts to ``merge'' \yyy{the}{these} two programming languages\yyy{}{, that are}
+    from different programming paradigms.}
 }
-The attempts fall into two categories as follows,\eref{comma-before-list}
+The attempts fall into two categories as follows:
 
 \begin{enumerate}
 \item
