--- a/proto1.tex
+++ b/proto1.tex
@@ -56,13 +56,14 @@ The ones relevant to this thesis are,\eref{comma-before-list}
 
 \item \codeLibrary{prolog-0.2.0.1} \cite{prolog-lib}
 
-  One of the existing implementation of \progLang{Prolog} in \progLang{Haskell}\yyy{}{\Large,} though partial\yyy{}{\Large,} provides a starting
-  point for the implementation \yyy{providing}{as it provides}
-  certain components to exercise\endnote{%
+  One of the existing implementation of \progLang{Prolog} in \progLang{Haskell}, though partial, provides a starting
+  point for the implementation as it provides
+  certain components to test\endnote{%
     Do you mean ``test''?
+    \mehul{Yes}
 }
   our approach.
-  The main components of this library are adopted from \progLang{Prolog} and modified,\eref{comma-before-list}
+  The main components of this library are adopted from \progLang{Prolog} and modified:\eref{comma-before-list}
 
 \begin{enumerate}
 \item the language, adopted from \progLang{Prolog} but trimmed down;
@@ -173,7 +174,7 @@ yes
   and \mSV{term2} unify, and \mSV{term1} is instantiated to \mSV{term2}\,.
   Similarly, if \mSV{term2} is a variable and \mSV{term1} is any type of term, then \mSV{term1} and \mSV{term2}
   unify, and \mSV{term2} is instantiated to \mSV{term1} . (So if they are both 
-variables, \yyy{they’re}{they're} both instantiated to each other, and we say that they share values.)
+variables, they're both instantiated to each other, and we say that they share values.)
 \par
 \begin{minted}[linenos,frame=lines]{prolog}
 ?-  mia  =  X.
@@ -210,7 +211,7 @@ yes
 \item Two terms unify if and only if it follows from the previous three clauses that they unify.
 \end{enumerate}
 
-Unification is just a part of the process \yyy{were}{where} the language
+Unification is just a part of the process where the language
 attempts to find a solution for the given query using the rules provided
 in the knowledge base.
 The other part is actually reaching a point where two terms need to be
@@ -230,7 +231,7 @@ append([],L,L).
 append([H|T],L2,[H|L3])  :-  append(T,L2,L3).
 \end{minted}
 %
-\yyy{}{whose operation is illustrated in Figure~\ref{fig:Trace for append}.}
+whose operation is illustrated in Figure~\ref{fig:Trace for append}.
 In this prototype we explore the unification aspect only.\endnote{%
   I've tidied up a bit here.  See if this reads more clearly.  I've also
   removed a comment.\newline  (Commit \textsf{\bfseries fe997de\-08bda2\-64c453\-204e97\-1a1cfd\-219457acf}).
@@ -273,7 +274,7 @@ To start we need to define a abstract syntax for the \progLang{Prolog} like\eref
 But there is a conflict between the type systems as we shall discuss.
 
 
-A type system consists of a set of rules to define a \yyy{"}{``}type\yyy{"}{''} to different constructs in a
+A type system consists of a set of rules to define a ``type'' to different constructs in a
 programming language such as variables, functions and so on.
 A static type system requires types to be attached to the programming constructs before hand which results in
 finding errors at compile time and thus increase the reliability of the program.
@@ -306,13 +307,13 @@ For dynamic typing
 \item Re-usability
 \end{enumerate}
 
-Since \progLang{Haskell} is statically type we would need to define a \yyy{"}{``}typed\yyy{"}{''} language which
+Since \progLang{Haskell} is statically type we would need to define a ``typed\yyy'' language which
 should have a number of constructs representing different terms in \progLang{Prolog} such as complex structures
 (for example predicates, clauses etc.), don't cares, cuts, variables and so on.\endnote{% 
   Drop the ``would''s here.
 }
 
-Consider the language {in \yyy{Figure}{Listing}~\ref{tab:closed-terms}}\yyy{}{\Large,} which has been adopted from
+Consider the language {in Listing~\ref{tab:closed-terms}}, which has been adopted from
 \cite{prolog-lib}.
 
 \begin{code-list}
@@ -352,22 +353,22 @@ append :: [Term] -> [Term] -> [Term]
 \end{minted}
 
 \begin{comment}
-The \xxx{above} data type \yyy{}{Figure~\ref{tab:closed-terms}} is recursive as seen in the constructor,
+The \xxx{above} data type Figure~\ref{tab:closed-terms} is recursive as seen in the constructor,
 \mint{haskell}|Struct Atom [Term]|
 \end{comment}
 
-\yyy{Figure}{Listing}~\ref{tab:closed-terms} is a classic example of using a recursive data type to define the
+Listing~\ref{tab:closed-terms} is a classic example of using a recursive data type to define the
 abstract syntax of a language.
 One of the issues with the above datatype is that it is not possible to distinguish the structure of the data from
 the data type itself \cite{sheard2004two}.
-Moreover, the primitives of the language\yyy{}{(see \cite{website:understandingalgebrasfpcomplete})}\endnote{%
+Moreover, the primitives of the language (see \cite{website:understandingalgebrasfpcomplete})\endnote{%
   is this ok?
 }
 are not accessible as the language can have expressions of only one
-type\yyy{}{\Large,} i.e.\yyy{}{\Large,} ``\unknownLabel{Term}''.
+type, i.e., ``\unknownLabel{Term}''.
 
 \begin{comment}
-The solution \xxx{to} would be to add a type constructor split the data type into two levels, a single recursive
+The solution  would be to add a type constructor split the data type into two levels, a single recursive
 data type is replaced by two related data types.
 \end{comment}
 Consider the code in Listing~\ref{tab:non-recurse}
@@ -383,8 +384,8 @@ Consider the code in Listing~\ref{tab:non-recurse}
   \label{tab:non-recurse}
 \end{code-list}
 
-One result of \yyy{the approach}{coding as in Listing~\ref{tab:non-recurse} rather than as in
-  Listing~\ref{tab:closed-terms} (lines 6--9)}
+One result of coding as in Listing~\ref{tab:non-recurse} rather than as in
+  Listing~\ref{tab:closed-terms} (lines 6--9)
   is that the non-recursive type
 \texttt{FlatTerm} is modular and generic as the structure
 \markWord{FlatTerm}
@@ -420,11 +421,11 @@ and a generic function like,
   I think this is more to say all terms in the language can be (FlatTerm a) and not
   (FlatTerm (FlatTerm (FlatTerm ....)))
 \end{comment}
-\yyy{Although one}{One} problem remains\yyy{,}{:} how does one represent \xxx{infinitely nested /} deep expressions
+One problem remains: how does one represent deep expressions
 of the above language, 
 for example something of the form,
 \mint{haskell}|FlatTerm(FlatTerm (FlatTerm (FlatTerm (....... (a)))))|
-and how to represent it generically to perform operations on it\yyy{ since,}{, since}
+and how to represent it generically to perform operations on it, since
 \begin{minted}[linenos]{haskell}
 (FlatTerm a) != (FlatTerm (FlatTerm a))
 \end{minted}
@@ -485,7 +486,7 @@ Generically speaking, the language can be expanded for additional functionality 
 the scenario where the language needs to accommodate additional type of terms,
 
 \begin{enumerate}
-\item Manually modifying the structure of the language, as shown in \yyy{Figure}{Listing}~\ref{tab:man-enhan-gram}
+\item Manually modifying the structure of the language, as shown in Listing~\ref{tab:man-enhan-gram}
   \begin{code-list}
     \begin{minted}[linenos,gobble=5]{haskell}
       type Atom            = String
@@ -555,13 +556,13 @@ That is use code something like that in Figure~\ref{tab:garfunkle}, and show how
 
 \david{Check the Section~\ref{sec:making-lang-comp} title change above.}
 
-Our language \yyy{}{is} now opened up and \xxx{is}\endnote{%
+Our language is now opened up and \endnote{%
   The ``is'' seems mispaced.
 }
-ready for expansion\yyy{}{\Large,}
+ready for expansion,
 but it still needs to conform to the requirements of
-\yyy{the \cite{unification-fd-lib} library}{the \codeLibrary{unifiication-fd} library
-  (\cite{unification-fd-lib}),} so that the generic unification algorithm upon customization works
+the \codeLibrary{unifiication-fd} library
+  (\cite{unification-fd-lib}), so that the generic unification algorithm upon customization works
 with it.\endnote{%
   This sentence can be simplified, I think.}
 
@@ -594,7 +595,7 @@ The data here is the \progLang{Prolog} abstract syntax and the containers are
   Removed the \macroName{clearpage}.
 }
 
-\yyy{Below}{\Huge Figure~}\ref{fig:Functor Hierarchy} shows the relation between the different classes.
+Figure~\ref{fig:Functor Hierarchy} shows the relation between the different classes.
 
 \begin{figure}[th]
 \centering
@@ -609,10 +610,10 @@ The \Verb!Functor! and \Verb!Foldable! instances providing functions for applyin
 to the data structure.
 The primary issue is that at the end of the operation the structure if the data type is lost which would not help
 our cause since the result of a query must be a list of substitutions which are essential pairs of language
-variable with language values\yyy{}{\Verb[showspaces]! !}(language constructs).
+variable with language values (language constructs).
 
-Enter\xxx{,} \Verb[formatcom=\bf]!Traversable!\yyy{,}{\,.}%}{
-\yyy{it}{It} allows reduce whilst preserving the shape of the structure.
+Enter \Verb[formatcom=\bf]!Traversable!\,.%}{
+It allows reduce whilst preserving the shape of the structure.
 Lastly, the Applicative instance is an intermediate between a functor and a monad.
 
 We create the necessary instances\endnote{%
@@ -632,7 +633,7 @@ as shown in \yyy{Figure}{Listing}~\ref{tab:flat-term-class-inst}.
 The above lay the foundation to work with the library.
 Coming back to the library, the language must have the \Verb!Unifiable! instance.
 This works in tandem with the \Verb!UTerm! data type.
-The \Verb!UTerm! data type captures the recursive structure of logic terms\yyy{}{\Large,} i.e\yyy{}{\Large.}, given
+The \Verb!UTerm! data type captures the recursive structure of logic terms, i.e., given
 some functor \(t\) which describes the 
 constructors of our logic terms, and some type \(v\) which describes our logic variables, the type
 \Verb!UTerm! \(t\) \(v\) is the
@@ -640,7 +641,7 @@ type of logic terms: trees with multiple layers of \(t\) structure and leaves of
 The \Verb!Unifiable! class gives one step of the unification process.
 Just as we only need to specify one level of the ADT (i.e., \Verb!T!) and then we can use the library's \Verb!UTerm! to generate
 the recursive ADT, so too we only need to specify one level of the unification (i.e., \Verb!zipMatch!) and then we can use
-the library's operators to perform the recursive unification\xxx{, subsumption}.
+the library's operators to perform the recursive unification.
 This is shown in Figure~\ref{tab:zipMatch}.
 \begin{code-list}
   \begin{singlespace}
